[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/level/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/level/level.gd" type="Script" id=2]
[ext_resource path="res://assets/images/signs/signs.png" type="Texture" id=3]
[ext_resource path="res://src/level/fog/fog_screen_handler.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/level/camera_handler.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/signs/sign-all-keys.png" type="Texture" id=6]
[ext_resource path="res://src/level/snow/snow_screen_handler.tscn" type="PackedScene" id=7]




[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="FogScreenHandler" parent="." instance=ExtResource( 4 )]
z_index = 1

[node name="CameraHandler" parent="." instance=ExtResource( 5 )]

[node name="SnowScreenHandler" parent="." instance=ExtResource( 7 )]

[node name="SSign" type="Sprite" parent="."]
visible = false
light_mask = 4
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 33, 0, 29, 24 )

[node name="WADSign" type="Sprite" parent="."]
visible = false
light_mask = 4
z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 65, 0, 29, 24 )

[node name="WWSign" type="Sprite" parent="."]
visible = false
light_mask = 4
z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 97, 0, 29, 24 )

[node name="SignAllKeys" type="Sprite" parent="."]
visible = false
light_mask = 4
z_index = 1
texture = ExtResource( 6 )
